...
    <string name="creation_collage_title">Collage</string>
    <string name="creation_collage_back">Back</string>
    <string name="creation_collage_originals">Adjust the layout without changing your originals. The exported PNG matches this preview.</string>
    <string name="creation_collage_preview">Collage preview</string>
    <string name="creation_collage_template">Layout</string>
    <string name="creation_collage_order">Photo order</string>
    <string name="creation_collage_photo">Photo %1$d</string>
    <string name="creation_collage_earlier">Move earlier</string>
    <string name="creation_collage_later">Move later</string>
    <string name="creation_collage_crop">Adjust photo %1$d</string>
    <string name="creation_collage_zoom">Zoom</string>
    <string name="creation_collage_horizontal">Horizontal position</string>
    <string name="creation_collage_vertical">Vertical position</string>
...
